--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,7 @@
         </activity>
         <activity android:name=".CreateFileActivity" />
         <activity android:name=".OpenFileActivity"></activity>
+        <activity android:name=".PasswordQueryPopUp" android:theme="@style/AppTheme.PasswordPopUp"></activity>
     </application>
 
 </manifest>
